@@ -16,12 +16,9 @@
 ##  You should have received a copy of the GNU General Public License
 ##  along with Rcpp.  If not, see <http://www.gnu.org/licenses/>.
 
-.runThisTest <- Sys.getenv("RunAllRcppTests") == "yes"
+if (Sys.getenv("RunAllRcppTests") != "yes") exit_file("Set 'RunAllRcppTests' to 'yes' to run.")
 
-if (!.runThisTest) exit_file("Skipping 'test_exceptions.R'")
-
-library(Rcpp)
-sourceCpp("cpp/exceptions.cpp")
+Rcpp::sourceCpp("cpp/exceptions.cpp")
 
 #test.stdException <- function() {
 ## Code works normally without an exception
