@@ -16,12 +16,9 @@
 ##  You should have received a copy of the GNU General Public License
 ##  along with Rcpp.  If not, see <http://www.gnu.org/licenses/>.
 
-.runThisTest <- Sys.getenv("RunAllRcppTests") == "yes"
+if (Sys.getenv("RunAllRcppTests") != "yes") exit_file("Set 'RunAllRcppTests' to 'yes' to run.")
 
-if (!.runThisTest) exit_file("Skipping 'test_exceptions_nocall.R'")
-
-library(Rcpp)
-sourceCpp("cpp/Exceptions_nocall.cpp")
+Rcpp::sourceCpp("cpp/Exceptions_nocall.cpp")
 
 #    test.Rcpp_exception <- function() {
 tryCatch(Rcpp_exception(), error = function(e){
